test/runtime-integration-tests/TestPrograms/Syntax/Invalid/assignment_to_literal.5th
main(): int {
	for; // stray reserved keyword as statement should not parse
	return 0;
}
